# pyastyle

./: .gitmodules  README.rst  pyproject.toml  setup.py
